plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.0-M2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.spgroup'
version = '0.0.1-SNAPSHOT'
description = 'sports-tracker'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.kafka:spring-kafka'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    implementation 'com.fasterxml.jackson.core:jackson-databind'

    implementation 'org.springframework.boot:spring-boot-starter-aop'

    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'


    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.mockito:mockito-core'
    testImplementation 'org.mockito:mockito-junit-jupiter'
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs = [
            '--enable-native-access=ALL-UNNAMED'
    ]
}

// ========================================
// JVM Arguments for Java 25 Compatibility
// ========================================
tasks.named('bootRun') {
    jvmArgs = [
            // Fix native library warnings (zstd, snappy, etc.)
            '--enable-native-access=ALL-UNNAMED'
    ]
}
